--- a/mural/templates/mural/list.html
+++ b/mural/templates/mural/list.html
@@ -22,15 +22,17 @@
 
     <div class="col-md-12 cards-content mural">
     	<div class="col-md-9 col-sm-9 col-xs-9">
-    		<div class="row post_make">
-    			<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 user-img">
-    				<img src="{{ request.user.image_url }}" class="img-responsive" />
-    			</div>
-    			<div class="col-lg-11 col-md-11 col-sm-11 col-xs-11 post-field">
-    				<div>
-    					<h4>{% trans 'Wish to make a new post?' %}</h4>
-    				</div>
-    			</div>
+    		<div class="row post_make panel panel-default">
+    			<div class="panel-body">
+	    			<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 user-img text-center">
+	    				<img src="{{ request.user.image_url }}" class="img-responsive" />
+	    			</div>
+	    			<div class="col-lg-11 col-md-11 col-sm-11 col-xs-11 post-field">
+	    				<div>
+	    					<h4>{% trans 'Wish to make a new post?' %}</h4>
+	    				</div>
+	    			</div>
+	    		</div>
     		</div>
 
     		{% if posts.count > 0 %}
