solved design issues and some messages

--- a/amadeus/static/css/base/amadeus.css
+++ b/amadeus/static/css/base/amadeus.css
@@ -111,6 +111,19 @@ a:focus {
 /* side bar menu ends*/
 
 /* category app starts */
+.resource-panel > .panel-heading{
+    padding: 0px 0px;
+    background-color: #BDBDBD;
+}
+
+.resource-panel .btn-group{
+    margin: 0px 0px;
+}
+
+.resource-panel h4{
+    margin-top: 8px !important;
+}
+
 .category-panel > .panel-heading, .subject-panel > .panel-heading, .special-panel > .panel-heading, .topic-panel > .panel-heading, .group-panel > .panel-heading {
     padding: 2px 0px;
 }
