--- a/subjects/templates/subjects/list_search.html
+++ b/subjects/templates/subjects/list_search.html
@@ -30,7 +30,7 @@
     {% if subjects|length > 0 %}
          <p id="search-results-title">{% trans "Search results" %}:</p>
     {% else %}
-         <p id="search-results-title">{% trans "Search results" %}: {% trans " any subjects or resources were found on the search for " %}  {{tags}} </p>
+         <p id="search-results-title">{% trans "Search results" %}: {% trans " Any subjects or Resources were not found on the search for " %}  {{tags}} </p>
     {% endif %}
     <div id="core-subjects-options-div">
         <ul class="core-subjects-options">
