Adding post creation

--- a/amadeus/static/css/base/amadeus.css
+++ b/amadeus/static/css/base/amadeus.css
@@ -969,3 +969,12 @@ li.item .notify_badge {
     cursor: text;
     font-style: italic;
 }
+
+.post_action i {
+    font-size: 45px;
+}
+
+.post-button {
+    padding-right: inherit !important;
+    padding-left: inherit !important;
+}
