--- a/mural/templates/mural/_view.html
+++ b/mural/templates/mural/_view.html
@@ -1,5 +1,53 @@
+{% load i18n mural_filters %}
+
 <div class="row panel panel-default">
-	<div class="panel-body">
-		{{ post.user }}
+	<div class="panel-body post">
+		<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 post-img">
+			<img src="{{ post.user.image_url }}" class="img-responsive" />
+		</div>
+		<div class="col-lg-11 col-md-11 col-sm-11 col-xs-11 post-body">
+			<h4 class="post-user">
+				{{ post.user }}
+				<span class="user-action">
+					<i class="fa {{ post.action|action_icon }}"></i>
+					{{ post.get_action_display }}
+				</span>
+				{% if request.user == post.user %}
+					<span class="btn-group pull-right">
+		                <button class="btn btn-sm btn_menu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+		                	<i class="fa fa-ellipsis-v" aria-hidden="true"></i>
+		                </button>
+						<ul class="dropdown-menu pull-right" aria-labelledby="moreActions">
+		                    <li><a href=""><i class="fa fa-pencil fa-fw" aria-hidden="true"></i> {% trans 'Edit' %}</a></li>
+		                    <li>
+		                    <a href="" aria-hidden="true"><i class="fa fa-trash fa-fw" aria-hidden="true"></i> {% trans 'Remove' %}</a></li>
+		                </ul>
+		            </span>
+		        {% endif %}
+			</h4>
+			<p class="time">
+				<i class="fa fa-clock-o"></i>
+				{% trans 'In' %} {{ post.last_update }}
+			</p>
+
+			{% autoescape off %}
+				{{ post.post }}
+			{% endautoescape %}
+
+			{% if post.image %}
+				<img src="{{ post.image.url }}" class="img-responsive center-block" />
+			{% endif %}
+
+		</div>
+		<div class="col-md-12 post-comment">
+			<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 user-img">
+				<img src="{{ request.user.image_url }}" class="img-responsive" />
+			</div>
+			<div class="col-lg-11 col-md-11 col-sm-11 col-xs-11 comment-field">
+				<div>
+					<h4 data-url="{% url 'mural:create_general' %}">{% trans 'Make a comment...' %}</h4>
+				</div>
+			</div>
+		</div>
 	</div>
 </div>
