--- a/subjects/templates/subjects/resource_card.html
+++ b/subjects/templates/subjects/resource_card.html
@@ -7,9 +7,9 @@
         <div class="panel-heading">
 		
 	  		<div class="row">
-                <div class="col-md-12 category-header">
+                <div class="col-md-12 resource-header">
                 	<h4 class="panel-title">
-                   		<a class="category-course-link pull-left" data-parent="#{% if accordion_id %}{{ accordion_id }}{% else %}{{ subject.category.slug }}-accordion{% endif %}" data-toggle="collapse" href="#{{resource.slug}}">
+                   		<a class="resource-link pull-left" data-parent="#{% if accordion_id %}{{ accordion_id }}{% else %}{{ subject.category.slug }}-accordion{% endif %}" data-toggle="collapse" href="#{{resource.slug}}">
                             <button class="btn btn-default btn-xs text-center cat-selector"><i class="fa fa-angle-right fa-2x" aria-hidden="true"></i></button> {{ resource }}
                         </a>
                 	</h4>
