Adding mural notifications

--- a/amadeus/templates/base.html
+++ b/amadeus/templates/base.html
@@ -260,6 +260,7 @@
     <!-- Init material Bootstrap -->
     <script type="text/javascript">$.material.init()</script>
     <script src="{% static 'js/main.js' %}"></script>
+    <script src="{% static 'js/socket.js' %}"></script>
 </body>
 
 </html>
