made link work on search view

--- a/subjects/templates/subjects/resource_card.html
+++ b/subjects/templates/subjects/resource_card.html
@@ -55,8 +55,12 @@
                 <p>{{resource.brief_description|safe}}</p>
            
             {% endif %}
-           
-             <a href="{% url resource.access_link resource.slug %}" class="btn btn-success btn-raised"> {% trans "Access Resource" %}</a>
+        {% if resource.link %}
+             <a href="{{resource.link.link_url}}" class="btn btn-success btn-raised" target="_blank"> {% trans "Access Resource" %}</a>
+        {% else %}
+            <a href="{% url resource.access_link resource.slug %}" class="btn btn-success btn-raised"> {% trans "Access Resource" %}</a>
+        {% endif %}
+            
            
             
          
