--- a/amadeus/templates/base.html
+++ b/amadeus/templates/base.html
@@ -97,6 +97,10 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-close-others="true">
                             <img src="{% static "img/brazilicon.png" %}" />
                         </a>
+
+                        <a href="#" class="dropdown-toggle title" data-toggle="dropdown" data-close-others="true">
+                            <h4 >{% trans "Language Selector" %}</h4>
+                        </a>
                         <ul class="dropdown-menu">
                             <li class="active">
                               <a href="#">
@@ -104,6 +108,13 @@
                                 <span>{% trans "PT-BR" %}</span>
                               </a>
                             </li>
+                            <li >
+                              <a href="#">
+                                <img src="{% static "img/euaicon.png" %}" />
+                                <span>{% trans "EN-US" %}</span>
+                              </a>
+                            </li>
+
                             <li >
                               <a href="#">
                                 <img src="{% static "img/euaicon.png" %}" />
