Adding favorite post function

--- a/amadeus/static/css/base/amadeus.css
+++ b/amadeus/static/css/base/amadeus.css
@@ -1070,3 +1070,7 @@ li.item .notify_badge {
     font-style: italic;
     cursor: text;
 }
+
+.btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:active.focus, .btn.active.focus {
+    outline: none;
+}
