--- a/amadeus/static/css/base/amadeus.css
+++ b/amadeus/static/css/base/amadeus.css
@@ -1043,7 +1043,7 @@ li.item .notify_badge {
     padding: 10px 0px 8px 0px;
 }
 
-.post .post-comment .user-img {
+.post .post-comment .user-img div {
     display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
     display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
     display: -ms-flexbox;      /* TWEENER - IE 10 */
