--- a/amadeus/templates/base.html
+++ b/amadeus/templates/base.html
@@ -190,9 +190,10 @@
                                 <i class="fa fa-graduation-cap" aria-hidden="true"></i>
                             </a>
                         </li>
-                        <li class="item {{ mural_menu_active }}" data-toggle="tooltip" data-placement="right" title="{% trans "Timeline" %}">
+                        <li class="item {{ mural_menu_active }} action_icon" data-toggle="tooltip" data-placement="right" title="{% trans "Timeline" %}">
                             <a href="{% url 'mural:manage_general' %}">
                                 <i class="fa fa-list" aria-hidden="true" ></i>
+                                <span class="badge notify_badge mural_badge" {% if mural_notifications_count == 0 %} style="display:none" {% endif %}>{% if mural_notifications_count > 99 %} +99 {% else %} {{ mural_notifications_count }} {% endif %}</span>
                             </a>
                         </li>
                         <li class="item" data-toggle="tooltip" data-placement="right" title="{% trans "Messages" %}">
@@ -241,9 +242,10 @@
                                 <i class="fa fa-graduation-cap" aria-hidden="true"></i>
                             </a>
                         </li>
-                        <li class="item  {{ mural_menu_active }}" data-toggle="tooltip" data-placement="top" title="{% trans "Timeline" %}">
+                        <li class="item {{ mural_menu_active }} action_icon" data-toggle="tooltip" data-placement="top" title="{% trans "Timeline" %}">
                             <a href="{% url 'mural:manage_general' %}"
                                 <i class="fa fa-list" aria-hidden="true" ></i>
+                                <span class="badge notify_badge mural_badge" {% if mural_notifications_count == 0 %} style="display:none" {% endif %}>{% if mural_notifications_count > 99 %} +99 {% else %} {{ mural_notifications_count }} {% endif %}</span>
                             </a>
                         </li>
                         <li class="item" data-toggle="tooltip" data-placement="top" title="{% trans "Messages" %}">
