--- a/mural/templates/mural/_view.html
+++ b/mural/templates/mural/_view.html
@@ -45,7 +45,9 @@
 		</div>
 		<div class="col-md-12 post-comment">
 			<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 user-img">
-				<img src="{{ request.user.image_url }}" class="img-responsive" />
+				<div>
+					<img src="{{ request.user.image_url }}" class="img-responsive" />
+				</div>
 			</div>
 			<div class="col-lg-11 col-md-11 col-sm-11 col-xs-11 comment-field">
 				<div>
