--- a/mural/templates/mural/_view.html
+++ b/mural/templates/mural/_view.html
@@ -1,6 +1,6 @@
 {% load i18n mural_filters %}
 
-<div class="row panel panel-default">
+<div id="post-{{ post.id }}" class="row panel panel-default">
 	<div class="panel-body post">
 		<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 post-img">
 			<img src="{{ post.user.image_url }}" class="img-responsive" />
@@ -18,7 +18,7 @@
 		                	<i class="fa fa-ellipsis-v" aria-hidden="true"></i>
 		                </button>
 						<ul class="dropdown-menu pull-right" aria-labelledby="moreActions">
-		                    <li><a href=""><i class="fa fa-pencil fa-fw" aria-hidden="true"></i> {% trans 'Edit' %}</a></li>
+		                    <li><a onclick="editPost($(this));" data-url="{% url post.update_link post.id %}" data-post="{{ post.id }}"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i> {% trans 'Edit' %}</a></li>
 		                    <li>
 		                    <a href="" aria-hidden="true"><i class="fa fa-trash fa-fw" aria-hidden="true"></i> {% trans 'Remove' %}</a></li>
 		                </ul>
@@ -32,7 +32,7 @@
 			</h4>
 			<p class="time">
 				<i class="fa fa-clock-o"></i>
-				{% trans 'In' %} {{ post.last_update }}
+				{% trans 'In' %} {{ post.last_update }} {{ post|is_edited }}
 			</p>
 
 			{% autoescape off %}
