--- a/pdf_file/templates/pdf_file/create.html
+++ b/pdf_file/templates/pdf_file/create.html
@@ -25,7 +25,7 @@
 	<div class="card">
 		<div class="card-content">
 			<div class="card-body">
-				{% include 'file_links/_form.html' %}
+				{% include 'pdf_file/_form.html' %}
 			</div>
 		</div>
 	</div>
